# minilogue-viewer

./: .env.example  .gitignore  README.md  biome.json  index.html  package.json  plan.md  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ableton-release.yml
ableton/: .gitignore  build.ts  manifest.json  package-lock.json  package.json  tsconfig.json
ableton/scripts/: release.mjs  sync-version.mjs
ableton/src/: extension.ts  open-browser.ts
schema/: audio.json  mel-golden.json  minilogue-xd.params.json
scripts/: daemon.sh  dev-local.sh
src/: main.ts
src/components/: xd-display.test.ts  xd-knob.test.ts  xd-switch.ts
src/events/: bus.test.ts  files.test.ts
src/parser/: binary.ts  enums.ts  transforms.test.ts  transforms.ts
src/sections/: params.ts
src/styles/: main.css  panel.css  theme.css
src/types/: synth.ts
training/: __init__.py  audibility.py  audio_distance.py  daemon.py  encoder_train.py  export.py  finetune.py  korg.py  losses.py  mel_proxy_train.py  midi_monitor.py  panic.py  paramvec.py  pretrain.py  proxy_train.py  pyproject.toml  refine.py  runtime.py  schema.py  train.py  xd_interface.py  xd_params.py
training/data/: dataset.py  embed.py  mel.py  pull_contributions.py  surge_dataset.py  surge_sampler.py  sweep_dataset.py  verify_contrib.py  xd_dataset.py  xd_record.py
training/eval/: __init__.py  build_eval_set.py  compare_runs.py  gate_contrib.py  infer.py  metrics.py  render_presets.py  run_eval.py
training/model/: encoder.py  proxy.py
web/: biome.json  embed.html  example-library.mnlgxdlib  index.html  live.html  package.json  playwright.config.ts  pnpm-lock.yaml  resynth.html  tsconfig.json  vercel.json  vite.config.ts  vite.embed.config.ts
web/api/: contribute.ts  contributions.ts
web/e2e/: _shot.spec.ts  a11y.spec.ts  live.spec.ts  sound-match.spec.ts  viewer.spec.ts
web/public/models/: model.onnx
web/scripts/: build-schema.ts  copy-ort.mjs
web/src/: app.ts  embed.ts  live.ts  main.ts  panel.html  panel.ts  resynth.ts  views.a11y.test.ts
web/src/components/: index.ts  (+13 more)
(+62 files in other folders)
