[project]
name = "minilogue-xd-training"
version = "0.1.0"
description = "Audio -> Minilogue XD parameter sound-matching: data, model, ONNX export"
requires-python = ">=3.9"
# Core deps cover schema loading + `export.py --dummy` + the onnxruntime self-check.
dependencies = [
    "numpy",
    "onnx",
    "onnxruntime",
    "scipy",  # Sobol sweep sampling (scipy.stats.qmc) in xd_params
]

[project.optional-dependencies]
# Real training + ONNX export of a trained model (Phase 3/5).
train = ["torch", "librosa"]
# XD SysEx recording rig (Phase 4b).
record = ["mido", "python-rtmidi", "sounddevice", "soundfile"]
# CLAP audio embeddings for the proxy target (Stage 2). Also needs the `train` extra (torch).
proxy = ["laion-clap", "librosa"]
# Real-world resynthesis eval (eval/): model inference + audio similarity metrics.
# Add the `record` extra too for the automated hardware loop (--hardware).
eval = ["librosa", "soundfile"]
# Stage 4 hardware refinement: CMA-ES neighborhood search. Also needs `eval` + `record`.
refine = ["cma"]

# No build/install step needed — run entrypoints as modules from the repo root, e.g.
#   training/.venv/bin/python -m training.export --dummy
